--- a/index-6.html
+++ b/index-6.html
@@ -427,7 +427,7 @@
                     </div>
 
                     <!-- Video Background - Here you need to replace the videoURL with your youtube video URL -->
-                    <a id="bgndVideo" class="player" data-property="{videoURL:'BZw8EzYJTUY',containment:'#section-video-bg', autoPlay:true, mute:true, useOnMobile:true, loop:true, showControls:false, opacity:1}">youtube</a>
+                    <a id="bgndVideo" class="player" data-property="{videoURL:'BZw8EzYJTUY',containment:'#section-video-bg', autoPlay:true, mute:true, playsinline:1, useOnMobile:true, loop:true, showControls:false, opacity:1}">youtube</a>
 
                 </div>
 
