--- a/index.html
+++ b/index.html
@@ -1029,43 +1029,34 @@
           <div class="partners__text" data-aos="fade">Your succesful, our reputation! We are proud to accompany more than 30 major brands</div>
           <ul class="partners__list">
             <li class="partners__item" data-aos="fade" data-aos-delay="0">
-              <img src="img/partners/1.png" width="132" height="54" alt="badische landes-bibliothek">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="200">
-              <img src="img/partners/2.png" width="116" height="57" alt="christopher willis">
+              <img src="img/partners/2.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="400">
-              <img src="img/partners/3.png" width="104" height="64" alt="serenity hotel">
+              <img src="img/partners/3.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="600">
-              <img src="img/partners/4.png" width="125" height="32" alt="artchive crafts gallery">
+              <img src="img/partners/4.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="800">
-              <img src="img/partners/5.png" width="150" height="45" alt="creative space">
+              <img src="img/partners/5.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="0">
-              <img src="img/partners/6.png" width="141" height="27" alt="alpatech">
+              <img src="img/partners/6.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="200">
-              <img src="img/partners/7.png" width="104" height="38" alt="neuton interactive">
+              <img src="img/partners/7.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="400">
-              <img src="img/partners/8.png" width="124" height="47" alt="papilon">
+              <img src="img/partners/8.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="600">
-              <img src="img/partners/9.png" width="140" height="19" alt="good habits">
+              <img src="img/partners/9.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="800">
-              <img src="img/partners/10.png" width="134" height="29" alt="francois redblade">
-            </li>
-            <li class="partners__item" data-aos="fade" data-aos-delay="0">
-              <img src="img/partners/11.png" width="108" height="37" alt="oak">
-            </li>
-            <li class="partners__item" data-aos="fade" data-aos-delay="200">
-              <img src="img/partners/12.png" width="136" height="43" alt="magnet studio">
-            </li>
-            <li class="partners__item" data-aos="fade" data-aos-delay="400">
-              <img src="img/partners/13.png" width="111" height="39" alt="r.m rick meyers">
+              <img src="img/partners/10.png" width="116" height="116" alt="corelain">
             </li>
           </ul>
           <div class="partners__line"></div>
@@ -1125,7 +1116,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__top">
-          <a class="footer__email" href="mailto:hello@liarch-studio.co">hello@liarch-studio.co</a>
+          <a class="footer__email" href="mailto:hello@wellbeing-designs.com">hello@wellbeing-designs.com</a>
           <p>Let tell us know your dream and we will help you make it become reality</p>
         </div>
         <div class="footer__middle row">
@@ -1206,8 +1197,8 @@
         </div>
         <div class="row">
           <!-- Copyrights-->
-          <div class="footer__copyright col-12 col-sm-6">© 2021 <span>LIARCH</span> All Rights Reserved</div>
-          <div class="footer__design col-12 col-sm-6">Development by <span>Paul Studio</span>
+          <div class="footer__copyright col-12 col-sm-6">© 2025 <span>Wellbeing Designs</span> All Rights Reserved</div>
+          <div class="footer__design col-12 col-sm-6">orhgk 💚 <span>Fstop Creative</span>
           </div>
         </div>
       </div>
