--- a/index.html
+++ b/index.html
@@ -785,8 +785,7 @@
         </div>
         <div class="menu__bottom">
           <div class="menu__copy">
-            © 2021 <span>Liarch.</span> All Rights Reserved.
-            <br>Development by <span>Paul Studio</span>
+            © 2025 <span>Wellbeing Designs</span>
           </div>
           <!-- Social-->
           <ul class="menu__social social">
@@ -832,7 +831,7 @@
               <h1 class="an-awards__heading heading heading--h1">People First. Always!</h1>
               <div class="an-awards__text">Employing the power of architecture to shape physical environments, and provide for the needs of individuals and communities</div>
               <div class="an-awards__buttons">
-                <a class="btn" href="contact.html">Contact Us</a>
+                <a class="btn" href="#about-wb">About Us</a>
               </div>
               <div class="an-awards__notice">Dawson House, Jewry Street, <b>London EC3N 2EX</b></div>
               <div class="an-awards__phone phone-block">
@@ -859,17 +858,17 @@
                 <img src="img/wbd123.png" width="851" height="777" alt="">
                 <div class="our-story__intro-wrapper">
                   <div class="our-story__exp">
-                    <span class="our-story__exp-value">25</span>
-                    <span class="our-story__exp-text">years
-                      <br>of experience
+                    <span class="our-story__exp-value">01</span>
+                    <span class="our-story__exp-text">Lorem
+                      <br>Ipsum
                     </span>
                   </div>
-                  <div class="our-story__intro-text">The Leading In Architectural & Interior</div>
+                  <div class="our-story__intro-text">Lorem Ipsum Dolor</div>
                 </div>
               </div>
             </div>
             <div class="our-story__content col-12 col-md col-lg-5" data-aos="fade">
-              <h2 class="our-story__heading heading">People First. Always!</h2>
+              <h2 class="our-story__heading heading">Lorem Ipsum</h2>
               <div class="our-story__text our-story__text--style-bolditalic">Purpose</div>
               <div class="our-story__text">To create places which contribute positively to whole communities by enhancing; adding to; and using existing local assets, inspiration, and potential, with the purpose of creating new spaces that promote people's health, happiness, wellbeing, and personal growth and reduce social isolation and loneliness. </div>
               <div class="our-story__text our-story__text--style-bolditalic">Means</div>
@@ -893,7 +892,7 @@
       <!-- Type service-->
       <section class="webpage__type-service type-service">
         <div class="container">
-          <h2 class="type-service__heading heading" data-aos="fade">About Wellbeing Designs</h2>
+          <h2 class="type-service__heading heading" id="about-wb" data-aos="fade">About Wellbeing Designs</h2>
           <div class="type-service__text" data-aos="fade">We provide best solutions for your dream, still adapt your budget & still match twith requires about quality of project</div>
           <ul class="type-service__list row">
             <li class="type-service__item col-12 col-md" data-aos="fade">
@@ -1012,10 +1011,10 @@
               </span>
             </div>
             <div class="review__content col-12 col-md-6 align-self-center" data-aos="fade">
-              <div class="review__text">I don’t know what else to say, this is something that you haven’t seen before. Unique design, impressive, and outstanding support. Liarch always a pleasure to work!</div>
+              <div class="review__text">Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit!</div>
               <div class="review__author">
-                <div class="review__author-name">Laura Lorewnce</div>
-                <div class="review__author-detail">Director at <span>Cubic Hotel, Ukranie</span>
+                <div class="review__author-name">Lorem Ipsum Dolor Sit!</div>
+                <div class="review__author-detail">Lorem <span>Ipsum Dolor Sit</span>
                 </div>
               </div>
             </div>
@@ -1026,37 +1025,37 @@
       <section class="webpage__partners partners">
         <div class="partners__inner container">
           <h2 class="partners__heading heading" data-aos="fade">Our trusted partners</h2>
-          <div class="partners__text" data-aos="fade">Your succesful, our reputation! We are proud to accompany more than 30 major brands</div>
+          <div class="partners__text" data-aos="fade">Lorem Ipsum Dolor Sit Lorem Ipsum Dolor Sit Lorem Ipsum Dolor Sit Lorem Ipsum Dolor Sit Lorem Ipsum Dolor Sit</div>
           <ul class="partners__list">
             <li class="partners__item" data-aos="fade" data-aos-delay="0">
               <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="200">
-              <img src="img/partners/2.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="400">
-              <img src="img/partners/3.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="600">
-              <img src="img/partners/4.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="800">
-              <img src="img/partners/5.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="0">
-              <img src="img/partners/6.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="200">
-              <img src="img/partners/7.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="400">
-              <img src="img/partners/8.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="600">
-              <img src="img/partners/9.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
             <li class="partners__item" data-aos="fade" data-aos-delay="800">
-              <img src="img/partners/10.png" width="116" height="116" alt="corelain">
+              <img src="img/partners/1.png" width="116" height="116" alt="corelain">
             </li>
           </ul>
           <div class="partners__line"></div>
