--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                 <img src="img/review/2.jpg" width="102" height="102" alt="">
               </span>
               <span class="review__image-author review__image-author--three" data-aos="fade-up">
-                <img src="img/review/3.jpg" width="125" height="125" alt="">
+                <img src="#" width="125" height="125" alt="">
               </span>
               <span class="review__image-author review__image-author--four" data-aos="fade-left">
                 <img src="img/review/4.jpg" width="84" height="84" alt="">
@@ -1011,10 +1011,10 @@
               </span>
             </div>
             <div class="review__content col-12 col-md-6 align-self-center" data-aos="fade">
-              <div class="review__text">Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit! Lorem Ipsum Dolor Sit!</div>
+              <div class="review__text">Biophilic design is central to creating spaces that truly serve people. By integrating nature, light, air, materials, and rhythm, we design environments that enhance wellbeing, reduce isolation, and foster connection. It’s how we turn everyday spaces into places that care for the people who use them.</div>
               <div class="review__author">
-                <div class="review__author-name">Lorem Ipsum Dolor Sit!</div>
-                <div class="review__author-detail">Lorem <span>Ipsum Dolor Sit</span>
+                <div class="review__author-name">Julie Smyth</div>
+                <div class="review__author-detail">Architect & Director <span></span>
                 </div>
               </div>
             </div>
@@ -1122,8 +1122,8 @@
           <!-- Footer contacts-->
           <div class="footer__column col-12 col-md">
             <div class="footer__column-title">Office</div>
-            <address class="footer__address">166 Main Street, Beverly Hills CA, 90210</address>
-            <a class="footer__phone" href="tel:+00853462188">+0085 346 2188</a>
+            <address class="footer__address">Dawson House, Jewry Street, London EC3N 2EX</address>
+            <a class="footer__phone" href="tel:+441616600441">0161 660 0441</a>
           </div>
           <div class="footer__column col-12 col-sm">
             <div class="footer__column-title">Help</div>
