--- a/index.html
+++ b/index.html
@@ -997,7 +997,9 @@
               <span class="review__image-author review__image-author--two" data-aos="fade-right">
                 <img src="img/review/2.jpg" width="102" height="102" alt="">
               </span>
-
+              <span class="review__image-author review__image-author--three" data-aos="fade-up">
+                <img src="img/review/3.jpg" width="125" height="125" alt="">
+              </span>
               <span class="review__image-author review__image-author--four" data-aos="fade-left">
                 <img src="img/review/4.jpg" width="84" height="84" alt="">
               </span>
