--- a/index.html
+++ b/index.html
@@ -208,292 +208,24 @@
           <ul class="navigation__list">
             <li class="navigation__item navigation__item--current">
               <a class="navigation__link">Home</a>
-              <div class="navigation__dropdown navigation__dropdown--columns">
-                <div class="navigation__dropdown-wrapper">
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Light</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item navigation__dropdown-item--current">
-                        <a>Home Default</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-modern.html">Home Modern</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-parallax.html">Home Parallax</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-technical-drawing.html">Home Technical Drawing</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-left-menu.html">Home Left Menu</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-visual.html">Home Visual</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Dark</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-default-dark.html">Home Default Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-modern-dark.html">Home Modern Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-parallax-dark.html">Home Parallax Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-technical-drawing-dark.html">Home Technical Drawing Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-left-menu-dark.html">Home Left Menu Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="home-visual-dark.html">Home Visual Dark</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link animsition-link" href="about-default.html">About</a>
-              <div class="navigation__dropdown navigation__dropdown--columns">
-                <div class="navigation__dropdown-wrapper">
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Light</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-default.html">About Default</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-universal.html">About Universal</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-visual.html">About Visual</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Dark</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-default-dark.html">About Default Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-universal-dark.html">About Universal Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="about-visual-dark.html">About Visual Dark</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+              <a class="navigation__link animsition-link" href="#">About</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link animsition-link" href="works-grid.html">Works</a>
-              <div class="navigation__dropdown navigation__dropdown--columns">
-                <div class="navigation__dropdown-wrapper">
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Light</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid.html">Works Grid</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid-2.html">Works Grid 2</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid-3.html">Works Grid 3</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-masonry.html">Works Masonry</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-listing.html">Works Listing</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-carousel-1.html">Works Carousel 1</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-carousel-2.html">Works Carousel 2</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-standart.html">Single Project Standart</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-sidebar.html">Single Project Sidebar</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-minimalism.html">Single Project Minimalism</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Dark</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid-dark.html">Works Grid Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid-2-dark.html">Works Grid 2 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-grid-3-dark.html">Works Grid 3 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-masonry-dark.html">Works Masonry Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-listing-dark.html">Works Listing Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-carousel-1-dark.html">Works Carousel 1 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="works-carousel-2-dark.html">Works Carousel 2 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-standart-dark.html">Single Project Standart Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-sidebar-dark.html">Single Project Sidebar Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-project-minimalism-dark.html">Single Project Minimalism Dark</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+              <a class="navigation__link animsition-link" href="#">Works</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link animsition-link" href="news-grid.html">News</a>
-              <div class="navigation__dropdown navigation__dropdown--columns">
-                <div class="navigation__dropdown-wrapper">
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Light</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-grid.html">News Grid</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-grid-2.html">News Grid 2</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-masonry.html">News Masonry</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-sidebar.html">News Sidebar</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-post.html">Single Post</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-post-sidebar.html">Single Post Sidebar</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Dark</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-grid-dark.html">News Grid Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-grid-2-dark.html">News Grid 2 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-masonry-dark.html">News Masonry Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="news-sidebar-dark.html">News Sidebar Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-post-dark.html">Single Post Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="single-post-sidebar-dark.html">Single Post Sidebar Dark</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+              <a class="navigation__link animsition-link" href="#">News</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link animsition-link" href="services.html">Pages</a>
-              <div class="navigation__dropdown navigation__dropdown--columns">
-                <div class="navigation__dropdown-wrapper">
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Light</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="services.html">Services</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="service-detail.html">Service Detail</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="pricing.html">Pricing</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="team.html">Team</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="contact.html">Contact</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="contact-2.html">Contact 2</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="404-error.html">404 Error</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="coming-soon.html">Coming Soon</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="navigation__dropdown-column">
-                    <div class="navigation__dropdown-column-title">Dark</div>
-                    <ul class="navigation__dropdown-list">
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="services-dark.html">Services Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="service-detail-dark.html">Service Detail Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="pricing-dark.html">Pricing Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="team-dark.html">Team Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="contact-dark.html">Contact Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="contact-2-dark.html">Contact 2 Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="404-error-dark.html">404 Error Dark</a>
-                      </li>
-                      <li class="navigation__dropdown-item">
-                        <a class="animsition-link" href="coming-soon-dark.html">Coming Soon Dark</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
+              <a class="navigation__link animsition-link" href="#">Pages</a>
             </li>
           </ul>
         </nav>
         <!-- Chat-->
         <a class="header__chat lets-chat" href="#">
-          <span class="lets-chat__text">Let’s chat!</span>
+          <span class="lets-chat__text">GET IN TOUCH</span>
           <span class="lets-chat__icon">
             <svg width="18" height="18">
               <use xlink:href="#comments-reply"></use>
