--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
                       <br>
                     </span>
                   </div>
-                  <div class="our-story__intro-text">Wellbeing Designs</div>
+                  <div class="our-story__intro-text">Our Manifesto</div>
                 </div>
               </div>
             </div>
             <div class="our-story__content col-12 col-md col-lg-5" data-aos="fade">
-              <h2 class="our-story__heading heading">Our Manifesto</h2>
+              <h2 class="our-story__heading heading">People First. Always!</h2>
               <div class="our-story__text our-story__text--style-bolditalic">Purpose</div>
               <div class="our-story__text">To create places which contribute positively to whole communities by enhancing; adding to; and using existing local assets, inspiration, and potential, with the purpose of creating new spaces that promote people's health, happiness, wellbeing, and personal growth and reduce social isolation and loneliness. </div>
               <div class="our-story__text our-story__text--style-bolditalic">Means</div>
@@ -602,7 +602,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer__top">
-          <a class="footer__email" href="mailto:hello@wellbeing-designs.com">hello@wellbeing-designs.com</a>
+          <a class="footer__email" href="mailto:office@wellbeing-designs.com">office@wellbeing-designs.com</a>
           <p>Let tell us know your dream and we will help you make it become reality</p>
         </div>
         <div class="footer__middle row">
