--- a/index.html
+++ b/index.html
@@ -608,9 +608,11 @@
         <div class="footer__middle row">
           <!-- Footer contacts-->
           <div class="footer__column col-12 col-md">
-            <div class="footer__column-title">Office</div>
-            <address class="footer__address">Dawson House, Jewry Street, London EC3N 2EX</address>
-            <a class="footer__phone" href="tel:+441616600441">0161 660 0441</a>
+            <div class="footer__column-title">Offices</div>
+            <address class="footer__address"><b>London </b></br>Dawson House, Jewry Street, EC3N 2EX</address>
+          <a class="footer__phone" href="tel:+441616600441">+44 161 660 0441</a></br></br></br>
+            <address class="footer__address"><b>Manchester </b></br>Cardinal House,20 St Mary's Parsonage, M3 2LY</address>
+            <a class="footer__phone" href="tel:+441616600441">+44 161 660 0441</a>
           </div>
           <div class="footer__column col-12 col-sm">
             <div class="footer__column-title">Help</div>
@@ -684,7 +686,7 @@
         <div class="row">
           <!-- Copyrights-->
           <div class="footer__copyright col-12 col-sm-6">© 2025 <span>Wellbeing Designs</span> All Rights Reserved</div>
-          <div class="footer__design col-12 col-sm-6">orhgk 💚 <span>Fstop Creative</span>
+          <div class="footer__design col-12 col-sm-6"> <span>Fstop Creative 🤍 </span> 
           </div>
         </div>
       </div>
